[package]
name = "warp-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = "0.7.10"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "process", "macros", "signal"] }
openssl = { version = "0.10.59", features = ["vendored"] }
reqwest = { version = "0.11.22" }
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"

[profile.release]
strip = true
panic = "abort"
